# commandfrog

./: .gitignore  .gitmodules  README.md  mypy.ini  pyproject.toml
commandfrog/: commandfrog.py  deploy.py  run.py
commandfrog/drivers/: docker.py  driver.py  exceptions.py  local.py  util.py
commandfrog/operations/: apt.py  docker.py  files.py  git.py  pyenv.py  ssh.py
commandfrog/stubs/paramiko/: client.pyi  common.pyi  dsskey.pyi  ecdsakey.pyi  kex_gex.pyi  kex_group1.pyi  kex_group16.pyi  primes.pyi  proxy.pyi  server.pyi  sftp.pyi  sftp_attr.pyi  ssh_exception.pyi  util.pyi  win_pageant.pyi
infra/: deploy.py
infra/operations/: apt.py  docker.py  files.py  git.py  mongo.py  nvm.py  pyenv.py  script.py  ssh.py  ubuntu.py
infra/stubs/paramiko/: _winapi.pyi  agent.pyi  ber.pyi  buffered_pipe.pyi  channel.pyi  compress.pyi  config.pyi  ed25519key.pyi  hostkeys.pyi  kex_curve25519.pyi  kex_group14.pyi  message.pyi  pipe.pyi  pkey.pyi  rsakey.pyi  sftp_file.pyi  sftp_handle.pyi  sftp_server.pyi  ssh_gss.pyi
stubs/paramiko/: auth_handler.pyi  file.pyi  kex_ecdh_nist.pyi  kex_gss.pyi  packet.pyi  py3compat.pyi  sftp_client.pyi  sftp_si.pyi  transport.pyi
tests/: test_1.py
